<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/closeImageView"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_rectangle"
            android:backgroundTint="@color/colorPrimaryDark"
            android:padding="13dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/filterOptionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:text="@string/filter_options"
            app:layout_constraintBottom_toBottomOf="@+id/closeImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/closeImageView" />

        <ImageView
            android:id="@+id/doneImageView"
            android:layout_width="86dp"
            android:layout_height="37dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_rectangle"
            android:backgroundTint="@color/colorPrimary"
            android:padding="13dp"
            app:layout_constraintBottom_toBottomOf="@+id/filterOptionsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filterOptionsTextView"
            app:srcCompat="@drawable/ic_done" />

        <TextView
            android:id="@+id/brandTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="46dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            android:text="@string/brand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closeImageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/brandList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandTextView">

            <Spinner
                android:id="@+id/brandSpinner"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brandList" />

        <androidx.cardview.widget.CardView
            android:id="@+id/priceList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="31dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceTextView">

            <Spinner
                android:id="@+id/priceSpinner"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/sizeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="46dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/size"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceList" />

        <androidx.cardview.widget.CardView
            android:id="@+id/sizeList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeTextView">

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>