<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorMain"
            app:layoutDescription="@xml/fragment_main_xml_constraintlayout_scene"
            tools:context=".presentation.MainFragment">

            <TextView
                android:id="@+id/textViewSelectCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="17dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/select_category"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewSelectCategory" />

            <TextView
                android:id="@+id/textViewHotSales"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/hot_sales"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryRecyclerView" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/hotSalesViewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHotSales" />

            <TextView
                android:id="@+id/textViewBestSeller"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="224dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/best_seller"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHotSales" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bestSellerRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewBestSeller" />

            <ImageView
                android:id="@+id/filterImageView"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:padding="5dp"
                android:layout_marginEnd="35dp"
                android:src="@drawable/ic_filter"
                app:layout_constraintBottom_toBottomOf="@+id/textViewSelectCategory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textViewSelectCategory" />

            <include
                android:id="@+id/filter"
                layout="@layout/filter_layout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="224dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewHotSales"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <include
                android:id="@+id/bottom_navigation"
                layout="@layout/bottom_navigation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </ScrollView>
</layout>